# prompty

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION.md  README.md  SETUP.md  package-lock.json  package.json
.github/workflows/: build-docker.yml  publish-python-sdk.yml
app/: layout.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/api/prompt/: route.ts
app/auth/signin/: page.tsx
app/dashboard/: page.tsx
app/init/: page.tsx
app/invite/: page.tsx
app/projects/[id]/: page.tsx
app/projects/[id]/_components/: agents-tab.tsx  api-keys-tab.tsx  settings-tab.tsx
app/projects/[id]/agents/[agentId]/: page.tsx
components/ui/: button.tsx
lib/: auth.ts  cosmosdb.ts
lib/server-actions/: agents.ts  api-keys.ts  projects.ts  prompts.ts  users.ts
python-sdk/: README.md  pyproject.toml
python-sdk/prompty/: __init__.py  client.py
scripts/: inject-standalone.js
types/: models.ts  next-auth.d.ts
