[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompty-sdk"
version = "0.1.0"
description = "Python SDK for Prompty - Real-time prompt management for AI agents"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Prompty Team"}
]
keywords = ["prompty", "ai", "prompt", "management", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/kaenova/prompty"
Repository = "https://github.com/kaenova/prompty"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompty*"]
